--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "recast.ly",
+  "name": "Movie-List",
   "version": "1.1.0",
-  "description": "Making YouTube with React and ES6",
-  "author": "Hack Reactor <curriculum.team@hackreactor.com>",
+  "description": "Making Movie-List",
+  "author": "Ryan Cowie <rjcowie@ucla.edu>",
   "license": "UNLICENSED",
-  "private": true,
+  "private": false,
   "scripts": {
-    "test": "live-server --open=./SpecRunner.html --port=8081",
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "babel . --out-dir compiled --presets=react --ignore=node_modules,compiled --source-maps inline -w"
   },
